@@ -1,0 +1,2 @@
+Tests the way combining character sequences that contain several combining
+characters are encoded.
