@@ -1,0 +1,111 @@
+data_multiple_combining_characters
+loop_
+_encodable_string_value
+_encodable_string_alias
+_encodable_string_comment
+ǖ '[1]'
+;
+ LATIN SMALL LETTER U WITH DIAERESIS AND MACRON (U+01D6).
+
+ Both the diaeresis and the macron have corresponding CIF special codes.
+ The order of combining characters is important.
+;
+ṻ '[2]'
+;
+ LATIN SMALL LETTER U WITH MACRON AND DIAERESIS (U+1E7B).
+
+ Both the macron and the diaeresis have corresponding CIF special codes.
+ The order of combining characters is important.
+;
+ṩ '[3]'
+;
+ LATIN SMALL LETTER S (U+0073) with two combining symbols:
+ - COMBINING DOT ABOVE (U+0307);
+ - COMBINING DOT BELOW (U+0323).
+
+ The combining dot above has a corresponding CIF special code while
+ the combining dot below does not.
+;
+ẛ̣ '[4]'
+;
+ LATIN SMALL LETTER LONG S (U+017F) with two combining symbols:
+ - COMBINING DOT ABOVE (U+0307);
+ - COMBINING DOT BELOW (U+0323).
+
+ The combining dot above has a corresponding CIF special code while
+ the combining dot below does not.
+
+ In this case the base character does not belong to the CIF 1.1
+ character set.
+;
+ q̣̇ '[5]'
+;
+ LATIN SMALL LETTER Q (U+0073) with two combining symbols:
+ - COMBINING DOT BELOW (U+0323);
+ - COMBINING DOT ABOVE (U+0307).
+
+ The order of combining symbols should remain the same upon encoding.
+;
+ q̣̇ '[6]'
+;
+ LATIN SMALL LETTER Q (U+0073) with two combining symbols:
+ - COMBINING DOT ABOVE (U+0307);
+ - COMBINING DOT BELOW (U+0323).
+
+ The order of combining symbols should be switched upon encoding
+ due to the NFC Unicode normalisation. That is, [6] should become [5]
+ upon encoding.
+;
+prefixǖ 'prefix-[1]'
+;
+ String [1] after regular characters.
+;
+ǖpostfix '[1]-postix'
+;
+ String [1] before regular characters.
+;
+prefixǖpostfix 'prefix-[1]-postfix'
+;
+ String [1] in between regular characters.
+;
+prefixṻ 'prefix-[2]'
+;
+ String [2] after regular characters.
+;
+ṻpostfix '[2]-postix'
+;
+ String [2] before regular characters.
+;
+prefixṻpostfix 'prefix-[2]-postfix'
+;
+ String [2] in between regular characters.
+;
+prefixṩ 'prefix-[3]'
+;
+ String [3] after regular characters.
+;
+ṩpostfix '[3]-postix'
+;
+ String [3] before regular characters.
+;
+prefixṩpostfix 'prefix-[3]-postfix'
+;
+ String [3] in between regular characters.
+;
+prefixẛ̣ 'prefix-[4]'
+;
+ String [4] after regular characters.
+;
+ẛ̣postfix '[4]-postix'
+;
+ String [4] before regular characters.
+;
+prefixẛ̣postfix 'prefix-[4]-postfix'
+;
+ String [4] in between regular characters.
+;
+'ǖ ǖxṩyyẛ̣ zzṻz' '[1][2][3][4]-mixture'
+;
+ Several instances of various characters with several combining symbols
+ in a single string.
+;
