@@ -1,0 +1,111 @@
+data_multiple_combining_characters
+loop_
+_encodable_string_value
+_encodable_string_alias
+_encodable_string_comment
+u&#x0308;&#x0304; '[1]'
+;
+ LATIN SMALL LETTER U WITH DIAERESIS AND MACRON (U+01D6).
+
+ Both the diaeresis and the macron have corresponding CIF special codes.
+ The order of combining characters is important.
+;
+u&#x0304;&#x0308; '[2]'
+;
+ LATIN SMALL LETTER U WITH MACRON AND DIAERESIS (U+1E7B).
+
+ Both the macron and the diaeresis have corresponding CIF special codes.
+ The order of combining characters is important.
+;
+s&#x0323;&#x0307; '[3]'
+;
+ LATIN SMALL LETTER S (U+0073) with two combining symbols:
+ - COMBINING DOT ABOVE (U+0307);
+ - COMBINING DOT BELOW (U+0323).
+
+ The combining dot above has a corresponding CIF special code while
+ the combining dot below does not.
+;
+&#x017F;&#x0323;&#x0307; '[4]'
+;
+ LATIN SMALL LETTER LONG S (U+017F) with two combining symbols:
+ - COMBINING DOT ABOVE (U+0307);
+ - COMBINING DOT BELOW (U+0323).
+
+ The combining dot above has a corresponding CIF special code while
+ the combining dot below does not.
+
+ In this case the base character does not belong to the CIF 1.1
+ character set.
+;
+ q&#x0323;&#x0307; '[5]'
+;
+ LATIN SMALL LETTER Q (U+0073) with two combining symbols:
+ - COMBINING DOT BELOW (U+0323);
+ - COMBINING DOT ABOVE (U+0307).
+
+ The order of combining symbols should remain the same upon encoding.
+;
+ q&#x0323;&#x0307; '[6]'
+;
+ LATIN SMALL LETTER Q (U+0073) with two combining symbols:
+ - COMBINING DOT ABOVE (U+0307);
+ - COMBINING DOT BELOW (U+0323).
+
+ The order of combining symbols should be switched upon encoding
+ due to the NFC Unicode normalisation. That is, [6] should become [5]
+ upon encoding.
+;
+prefixu&#x0308;&#x0304; 'prefix-[1]'
+;
+ String [1] after regular characters.
+;
+u&#x0308;&#x0304;postfix '[1]-postix'
+;
+ String [1] before regular characters.
+;
+prefixu&#x0308;&#x0304;postfix 'prefix-[1]-postfix'
+;
+ String [1] in between regular characters.
+;
+prefixu&#x0304;&#x0308; 'prefix-[2]'
+;
+ String [2] after regular characters.
+;
+u&#x0304;&#x0308;postfix '[2]-postix'
+;
+ String [2] before regular characters.
+;
+prefixu&#x0304;&#x0308;postfix 'prefix-[2]-postfix'
+;
+ String [2] in between regular characters.
+;
+prefixs&#x0323;&#x0307; 'prefix-[3]'
+;
+ String [3] after regular characters.
+;
+s&#x0323;&#x0307;postfix '[3]-postix'
+;
+ String [3] before regular characters.
+;
+prefixs&#x0323;&#x0307;postfix 'prefix-[3]-postfix'
+;
+ String [3] in between regular characters.
+;
+prefix&#x017F;&#x0323;&#x0307; 'prefix-[4]'
+;
+ String [4] after regular characters.
+;
+&#x017F;&#x0323;&#x0307;postfix '[4]-postix'
+;
+ String [4] before regular characters.
+;
+prefix&#x017F;&#x0323;&#x0307;postfix 'prefix-[4]-postfix'
+;
+ String [4] in between regular characters.
+;
+'u&#x0308;&#x0304; u&#x0308;&#x0304;xs&#x0323;&#x0307;yy&#x017F;&#x0323;&#x0307; zzu&#x0304;&#x0308;z' '[1][2][3][4]-mixture'
+;
+ Several instances of various characters with several combining symbols
+ in a single string.
+;
