@@ -1,3 +1,10 @@
+cod-tools (^/branches/feature/antanas-multiple-combining-char-fix)
+
+  * Fixed:
+    - COD::CIF::Unicode2CIF:
+      - the handling of composite character sequences that contain
+        several composite characters.
+
 cod-tools (unreleased)
 
   * Added:
